# llm-log-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
scripts/: release.sh
src/llm_log_analyzer/: analyze_log.py  constants.py  environment.py  llm_client.py  presets.py  utils.py
src/llm_log_analyzer/patterns/: README.md  android.txt  flutter.txt  generic.txt  ios.txt  unity.txt
src/llm_log_analyzer/prompts/: README.md  android.txt  flutter.txt  generic.txt  ios.txt  unity.txt
src/llm_log_analyzer/providers/: __init__.py  base.py  bedrock.py  claude.py  factory.py  gemini.py  openai.py  types.py
